@@ -23,7 +23,7 @@ rpm \- RPM Package Manager
 
 
 
-\fBrpm\fR {\fB-K|--checksig\fR} [\fB--nogpg\fR] [\fB--nopgp\fR] [\fB--nomd5\fR]
+\fBrpm\fR {\fB-K|--checksig\fR} [\fB--nosignature\fR] [\fB--nodigest\fR]
     \fB\fIPACKAGE_FILE\fB\fR\fI ...\fR
 
 .SS "INSTALLING, UPGRADING, AND REMOVING PACKAGES:"
@@ -737,7 +737,7 @@ The general forms of rpm digital signature commands are
 \fBrpm\fR \fB--import\fR \fB\fIPUBKEY\fB\fR\fI ...\fR
 
 
-\fBrpm\fR {\fB--checksig\fR} [\fB--nogpg\fR] [\fB--nopgp\fR] [\fB--nomd5\fR]
+\fBrpm\fR {\fB--checksig\fR} [\fB--nosignature\fR] [\fB--nodigest\fR]
     \fB\fIPACKAGE_FILE\fB\fR\fI ...\fR
 
 .PP
