@@ -32,6 +32,7 @@
 	- apply patches 7 and 8 to db-4.1.24.
 	- upgrade to elfutils-0.59.
 	- add -g to all platforms optflags.
+	- build with external elfutils (preferred), if available.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
